--- a/.gitignore
+++ b/.gitignore
@@ -205,3 +205,12 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
+
+# Jupyter notebooks
+.ipynb_checkpoints/
+*.nbconvert.ipynb
+
+
+# MLflow
+mlruns/
+mlartifacts/
